# vbindiff

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ConWin.cpp  ConWin.hpp  File_ID.DIZ  Makefile  Makefile.am  README.PuTTY  README.md  ReadMe.1st  StdAfx.cpp  StdAfx.h  VBinDiff.txt  build_w32.sh  build_w64.sh  build_windows.sh  cjm-style.el  config.h.cmake-in  config.h.in  configure.ac  getopt.cpp  getopt1.cpp  putty.src  tables.h  vbindiff.cc  vbindiff.cpp  vbindiff.dsp  vbindiff.dsw  vbindiff.pod
curses/: ConWin.cpp  ConWin.hpp  FileIO.hpp
tools/: NEWS.tt  ReadMe.tt  configure.commit  genfile.pl  getversion.pm  maketxt.pl  post-commit  vbindiff.pod.tt  version.h.tt  website.pl  zipdist.pl
win32/: ConWin.cpp  ConWin.hpp  FileIO.hpp  StdAfx.cpp  VBinDiff.sln  VBinDiff.vcxproj  VBinDiff.vcxproj.filters  config.h  update.pl  vbindiff.dsp  vbindiff.rc  version.h.cmake-in
win32/mingw/: winres.h  winresrc.h
